--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
     <maven.compiler.target>17</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <emf.version>2.28.0</emf.version>
+    <slf4j.version>2.0.3</slf4j.version>
+    <emf.version>2.29.0</emf.version>
     <emf.ecore.version>2.27.0</emf.ecore.version>
     <emf.ecore.xmi.version>2.17.0</emf.ecore.xmi.version>
   </properties>
@@ -33,6 +34,16 @@
       <groupId>org.eclipse.emf</groupId>
       <artifactId>org.eclipse.emf.ecore.xmi</artifactId>
       <version>${emf.ecore.xmi.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>log4j-over-slf4j</artifactId>
+      <version>${slf4j.version}</version>
     </dependency>
   </dependencies>
 
